[gd_scene load_steps=19 format=3 uid="uid://th7jb6irnykc"]

[ext_resource type="Script" uid="uid://cyqxg3e8vus4f" path="res://Resource/Levels/Tutorial_Part/level_1_tutorial_day_10.gd" id="1_ij5o2"]
[ext_resource type="PackedScene" uid="uid://cm3fbr5jbnjmq" path="res://Behaviour/basic_zombie.tscn" id="2_rglp2"]
[ext_resource type="Texture2D" uid="uid://b8i58el7y56a0" path="res://Resource/Levels/background_assets/day.png" id="3_4mbqr"]
[ext_resource type="Texture2D" uid="uid://d17d4ngwqf0r" path="res://Resource/Levels/background_assets/grass_layer.png" id="4_1oo8d"]
[ext_resource type="PackedScene" uid="uid://dols1i410thmc" path="res://HUD/borders/level_manager/main_camera.tscn" id="5_xxrpo"]
[ext_resource type="PackedScene" uid="uid://c3mfdn3yeigf3" path="res://Behaviour/lane_.tscn" id="6_4j2rf"]
[ext_resource type="PackedScene" uid="uid://d1bmnixb7oepy" path="res://Behaviour/sun_falling_behaviour.tscn" id="7_wil0c"]
[ext_resource type="PackedScene" uid="uid://pspn4765e0xo" path="res://HUD/borders/level_manager/zombie_wave_management.tscn" id="8_musfg"]
[ext_resource type="PackedScene" uid="uid://y1wnytmunqr8" path="res://HUD/borders/level_manager/new_plant_unlock_reward_node.tscn" id="9_wvy7l"]
[ext_resource type="Texture2D" uid="uid://cicfplhte2rh4" path="res://Resource/Levels/Tutorial_Part/award_for_demo.png" id="10_pd1qh"]
[ext_resource type="PackedScene" uid="uid://bj5p7r8n80cn" path="res://HUD/debug_mode.tscn" id="11_4hq3w"]
[ext_resource type="Script" uid="uid://bho6kxnwdxc1g" path="res://Resource/Levels/Tutorial_Part/test_tool.gd" id="12_rglp2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mbqr"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rglp2"]
bg_color = Color(0.28886694, 0.061809264, 0.06472699, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1oo8d"]
bg_color = Color(0.953257, 0.24066484, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewpwe"]
size = Vector2(1295, 699)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbpro"]
size = Vector2(138, 184)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4qp0"]
size = Vector2(798, 579.25)

[node name="testing_area" type="Node2D"]
y_sort_enabled = true
position = Vector2(539, 404)
script = ExtResource("1_ij5o2")

[node name="Day" type="Sprite2D" parent="."]
position = Vector2(1198, 136)
texture = ExtResource("3_4mbqr")

[node name="GrassLayer" type="Sprite2D" parent="Day"]
y_sort_enabled = true
position = Vector2(-494, 117)
texture = ExtResource("4_1oo8d")

[node name="main_camera" parent="." instance=ExtResource("5_xxrpo")]
position = Vector2(421, 136)
_mode = "normal_mode_with_pick"
sun_on_start = 500

[node name="test_tool" type="Panel" parent="main_camera"]
self_modulate = Color(1, 1, 1, 0.627451)
z_index = 350
offset_left = -977.0
offset_top = -561.0
offset_right = 988.0
offset_bottom = 575.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4mbqr")
script = ExtResource("12_rglp2")

[node name="ScrollContainer" type="ScrollContainer" parent="main_camera/test_tool"]
layout_mode = 0
offset_left = 80.0
offset_top = 64.0
offset_right = 1811.0
offset_bottom = 1042.0

[node name="VBoxContainer" type="VBoxContainer" parent="main_camera/test_tool/ScrollContainer"]
layout_mode = 2

[node name="common_controls" type="Control" parent="main_camera/test_tool/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1700, 500)
layout_mode = 2
mouse_filter = 1

[node name="Label" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 49.0
offset_top = -6.0
offset_right = 705.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 46
text = "COMMON CONTROL DEBUG"

[node name="Label2" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 84.0
offset_top = 80.0
offset_right = 360.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 21
text = "SUN DROP VALUE (1_KEY):"

[node name="Label3" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 84.0
offset_top = 124.0
offset_right = 360.0
offset_bottom = 164.0
theme_override_font_sizes/font_size = 21
text = "POWER DROP VALUE(2_KEY):"

[node name="Label4" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 838.0
offset_top = 75.0
offset_right = 1053.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 21
text = "PLANT PROJECTILE (3):"

[node name="Label5" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 86.0
offset_top = 221.0
offset_right = 351.0
offset_bottom = 261.0
theme_override_font_sizes/font_size = 21
text = "RESPAWN LAWNMOWERS:"

[node name="Label6" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 172.0
offset_top = 261.0
offset_right = 350.0
offset_bottom = 301.0
theme_override_font_sizes/font_size = 21
text = "UNLOCK SHOVEL:"

[node name="Label7" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 119.0
offset_top = 304.0
offset_right = 349.0
offset_bottom = 344.0
theme_override_font_sizes/font_size = 21
text = "UNLOCK POWERBANK:"

[node name="Label8" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 60.0
offset_top = 340.0
offset_right = 349.0
offset_bottom = 380.0
theme_override_font_sizes/font_size = 21
text = "SHOW LAWN BACKGROUND:"

[node name="Label9" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 95.0
offset_top = 384.0
offset_right = 352.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 21
text = "SELECTED BACKGROUND:"

[node name="Label10" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 876.0
offset_top = 454.0
offset_right = 1058.0
offset_bottom = 494.0
theme_override_font_sizes/font_size = 21
text = "RESET SAVE DATA:"

[node name="Label11" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 873.0
offset_top = 206.0
offset_right = 1055.0
offset_bottom = 246.0
theme_override_font_sizes/font_size = 21
text = "UNLOCK PLANTS"

[node name="Label13" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 243.0
offset_top = 425.0
offset_right = 350.0
offset_bottom = 465.0
theme_override_font_sizes/font_size = 21
text = "HIDE HUD:"

[node name="Label12" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 879.0
offset_top = 331.0
offset_right = 1061.0
offset_bottom = 371.0
theme_override_font_sizes/font_size = 21
text = "UNLOCK TOOLS:"

[node name="Label14" type="Label" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 54.0
offset_top = 462.0
offset_right = 349.0
offset_bottom = 502.0
theme_override_font_sizes/font_size = 21
text = "ALLOW CAMERA MOVEMENT:"

[node name="sunvalue_lineedit" type="LineEdit" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 395.0
offset_top = 79.0
offset_right = 545.0
offset_bottom = 110.0
text = "25"
placeholder_text = "sun value"
alignment = 1
max_length = 5
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_type = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="sunvalue_lineedit2" type="LineEdit" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 397.0
offset_top = 125.0
offset_right = 547.0
offset_bottom = 156.0
text = "1"
placeholder_text = "power value"
alignment = 1
max_length = 1
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_type = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="UNLOCKED_SHOVEL" type="Button" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 401.0
offset_top = 263.0
offset_right = 543.0
offset_bottom = 294.0
text = "UNLOCKED"

[node name="RESET_LAWNMOWERS" type="Button" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 401.0
offset_top = 224.0
offset_right = 543.0
offset_bottom = 255.0
text = "RESPAWN"

[node name="UNLOCKED_POWERBANK" type="Button" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 401.0
offset_top = 306.0
offset_right = 543.0
offset_bottom = 337.0
text = "UNLOCKED"

[node name="BACKGROUND_VISIBILITY" type="CheckButton" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
z_index = -10
y_sort_enabled = true
layout_mode = 0
offset_left = 402.0
offset_top = 347.0
offset_right = 446.0
offset_bottom = 371.0
button_pressed = true

[node name="BACKGROUND_SELECTION" type="OptionButton" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 401.0
offset_top = 382.0
offset_right = 541.0
offset_bottom = 413.0
selected = 0
item_count = 1
popup/item_0/text = "DAY HOUSE"
popup/item_0/id = 0

[node name="PROJECTILE_SELECTION" type="OptionButton" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 1091.0
offset_top = 75.0
offset_right = 1381.0
offset_bottom = 106.0
selected = 0
item_count = 2
popup/item_0/text = "PEASHOOTER PEA"
popup/item_0/id = 0
popup/item_1/text = "SNOWPEA PEA"
popup/item_1/id = 1

[node name="DEBUG_VISIBILITY" type="HSlider" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 1073.0
offset_top = 10.0
offset_right = 1383.0
offset_bottom = 42.0
min_value = 50.0
value = 50.0

[node name="RESET_SAVE_DATA" type="Button" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 1094.0
offset_top = 457.0
offset_right = 1231.0
offset_bottom = 488.0
theme_override_styles/normal = SubResource("StyleBoxFlat_rglp2")
theme_override_styles/hover = SubResource("StyleBoxFlat_1oo8d")
text = "RESET"

[node name="plant_name_unlock" type="LineEdit" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 1092.0
offset_top = 206.0
offset_right = 1372.0
offset_bottom = 237.0
placeholder_text = "plant name"
alignment = 1
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_type = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="TIER1 UPGRADE" type="CheckButton" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 1099.0
offset_top = 235.0
offset_right = 1269.0
offset_bottom = 266.0
text = "TIER1 UPGRADE"

[node name="TIER2 UPGRADE" type="CheckButton" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 1098.0
offset_top = 264.0
offset_right = 1268.0
offset_bottom = 295.0
text = "TIER2 UPGRADE"

[node name="TIER3 UPGRADE" type="CheckButton" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 1098.0
offset_top = 291.0
offset_right = 1268.0
offset_bottom = 322.0
text = "TIER3 UPGRADE"

[node name="UNLOCKED_PLANT" type="Button" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 1389.0
offset_top = 206.0
offset_right = 1531.0
offset_bottom = 237.0
text = "UNLOCKED"

[node name="plant_name_unlock2" type="LineEdit" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 1098.0
offset_top = 332.0
offset_right = 1367.0
offset_bottom = 363.0
placeholder_text = "tool name"
alignment = 1
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_type = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="UNLOCK_TOOL" type="Button" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 1391.0
offset_top = 333.0
offset_right = 1533.0
offset_bottom = 364.0
text = "UNLOCKED"

[node name="unlock_tool_upgrade" type="LineEdit" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
layout_mode = 0
offset_left = 1098.0
offset_top = 371.0
offset_right = 1367.0
offset_bottom = 402.0
placeholder_text = "tool upgrade"
alignment = 1
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_type = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="HUD_HIDE" type="CheckButton" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
z_index = -10
y_sort_enabled = true
layout_mode = 0
offset_left = 404.0
offset_top = 427.0
offset_right = 448.0
offset_bottom = 451.0

[node name="allow_camera_movement" type="CheckButton" parent="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls"]
z_index = -10
y_sort_enabled = true
layout_mode = 0
offset_left = 404.0
offset_top = 463.0
offset_right = 448.0
offset_bottom = 487.0

[node name="lane_1" parent="." instance=ExtResource("6_4j2rf")]
position = Vector2(0, -13)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="lane_2" parent="." instance=ExtResource("6_4j2rf")]
position = Vector2(0, 160)
lane_collision_layer = "lane2"
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="lane_3" parent="." instance=ExtResource("6_4j2rf")]
position = Vector2(0, 332)
lane_collision_layer = "lane3"
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="lane_4" parent="." instance=ExtResource("6_4j2rf")]
position = Vector2(0, 505)
lane_collision_layer = "lane4"
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="lane_5" parent="." instance=ExtResource("6_4j2rf")]
position = Vector2(0, 677)
lane_collision_layer = "lane5"
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="sun_falling_behaviour" parent="." node_paths=PackedStringArray("sun_location_where_it_land") instance=ExtResource("7_wil0c")]
position = Vector2(0, -3)
sun_location_where_it_land = NodePath("CollisionShape2D")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="sun_falling_behaviour"]
position = Vector2(654.5, 219.5)
shape = SubResource("RectangleShape2D_ewpwe")
metadata/_edit_lock_ = true

[node name="zombie_wave_management" parent="." node_paths=PackedStringArray("main_camera", "final_as_reward", "lane_1", "lane_2", "lane_3", "lane_4", "lane_5", "collision_where_zombie_is_place_preview") instance=ExtResource("8_musfg")]
offset_left = -576.0
offset_top = 804.0
offset_right = 944.0
offset_bottom = 2004.0
mouse_filter = 2
progress_bar_wave_scene = "uid://dr682qf7yx8v2"
main_camera = NodePath("../main_camera")
delay_before_game_start = 1.0
final_as_reward = NodePath("../NewPlantUnlockRewardNode")
lane_1 = NodePath("../lane_1")
lane_2 = NodePath("../lane_2")
lane_3 = NodePath("../lane_3")
lane_4 = NodePath("../lane_4")
lane_5 = NodePath("../lane_5")
collision_where_zombie_is_place_preview = NodePath("../preview_zombie")
metadata/_edit_lock_ = true

[node name="NewPlantUnlockRewardNode" parent="." instance=ExtResource("9_wvy7l")]
visible = false
position = Vector2(562, -1)
metadata/_edit_lock_ = true

[node name="SeedPacket" type="Sprite2D" parent="NewPlantUnlockRewardNode"]
z_index = 155
position = Vector2(11.5, 16.5)
scale = Vector2(1.27, 1.33)
texture = ExtResource("10_pd1qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NewPlantUnlockRewardNode"]
position = Vector2(6, 21)
shape = SubResource("RectangleShape2D_mbpro")

[node name="for_storing_groups_of_zombies" type="Node2D" parent="."]
position = Vector2(-327, -441)
metadata/_edit_lock_ = true

[node name="DebugMode" parent="." instance=ExtResource("11_4hq3w")]
visible = false
position = Vector2(-540, -404)
metadata/_edit_lock_ = true

[node name="preview_zombie" type="CollisionShape2D" parent="."]
position = Vector2(2154, 189.625)
shape = SubResource("RectangleShape2D_r4qp0")
metadata/_edit_lock_ = true

[node name="BasicZombie" parent="." instance=ExtResource("2_rglp2")]
visible = false
z_index = 20
position = Vector2(1, -2)

[connection signal="gui_input" from="main_camera/test_tool" to="." method="_on_test_tool_gui_input"]
[connection signal="toggled" from="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls/BACKGROUND_VISIBILITY" to="main_camera/test_tool" method="_on_background_visibility_toggled"]
[connection signal="item_selected" from="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls/PROJECTILE_SELECTION" to="main_camera/test_tool" method="_on_projectile_selection_item_selected"]
[connection signal="value_changed" from="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls/DEBUG_VISIBILITY" to="main_camera/test_tool" method="_on_debug_visibility_value_changed"]
[connection signal="pressed" from="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls/RESET_SAVE_DATA" to="main_camera/test_tool" method="_on_reset_save_data_pressed"]
[connection signal="pressed" from="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls/UNLOCKED_PLANT" to="main_camera/test_tool" method="_on_unlocked_plant_pressed"]
[connection signal="pressed" from="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls/UNLOCK_TOOL" to="main_camera/test_tool" method="_on_unlock_tool_pressed"]
[connection signal="toggled" from="main_camera/test_tool/ScrollContainer/VBoxContainer/common_controls/HUD_HIDE" to="main_camera/test_tool" method="_on_hud_hide_toggled"]
